Fixed many stuff on the home page
 margins, images are wider, z-index at 1001 for the header is enough, modals do not appear behind the header anymore
separate the javascript into a file to make the html more readable (index.erb/index.js)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,7 @@
 #header {
   background-color: white;
   width: 100%;
-  z-index: 9999999;
+  z-index: 1001;
   margin-bottom: 10px;
   border-bottom: 1px solid black;
 
